# portfolio_back

./: pyproject.toml  render.yaml
mariga/: apps.py
mariga/templates/render/: index.html
portfolio/: settings.py  urls.py
